--- a/project-parent/pom.xml
+++ b/project-parent/pom.xml
@@ -32,11 +32,28 @@
 	<dependencyManagement>
 		<dependencies>
 		<!-- poi依赖包 -->
+		
 		<dependency>
-		<groupId>org.apache.poi</groupId>
-		<artifactId>poi-ooxml</artifactId>
-		<version>3.5-FINAL</version>
-		</dependency>
+		    <groupId>org.apache.poi</groupId> 
+		    <artifactId>poi</artifactId>
+				<version>3.9</version>
+		</dependency> 
+		<dependency> 
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi-ooxml</artifactId>
+		    <version>3.9</version>
+		</dependency> 
+		<dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.6</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.6</version>
+        </dependency> 
 			<!-- 时间操作组件 -->
 			<dependency>
 				<groupId>joda-time</groupId>
