--- a/project-manager/project-manager-service/pom.xml
+++ b/project-manager/project-manager-service/pom.xml
@@ -14,6 +14,7 @@
   			 <version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<!-- 添加spring依赖 -->
+		
 		<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-context</artifactId>
@@ -33,6 +34,21 @@
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-aspects</artifactId>
+			</dependency>
+			<!-- JSP相关 -->
+			<dependency>
+				<groupId>jstl</groupId>
+				<artifactId>jstl</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>servlet-api</artifactId>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>jsp-api</artifactId>
+				<scope>provided</scope>
 			</dependency>
 	</dependencies>
 </project>
