--- a/project-manager/project-manager-web/pom.xml
+++ b/project-manager/project-manager-web/pom.xml
@@ -14,8 +14,29 @@
 			<artifactId>project-manager-service</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-  
-  	<!-- JSP相关 -->
+  	<!-- 添加spring依赖 -->
+		
+		<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-context</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-beans</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-webmvc</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-jdbc</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-aspects</artifactId>
+			</dependency>
+			<!-- JSP相关 -->
 			<dependency>
 				<groupId>jstl</groupId>
 				<artifactId>jstl</artifactId>
