--- a/project-manager/project-manager-web/src/main/webapp/WEB-INF/web.xml
+++ b/project-manager/project-manager-web/src/main/webapp/WEB-INF/web.xml
@@ -45,7 +45,20 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>project-manager</servlet-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>*.action</url-pattern>
 	</servlet-mapping>
- 
+	 <filter>
+			<description>URL权限校验</description>
+			<filter-name>requestFilter</filter-name>
+			<filter-class>com.project.weframe.servlet.ToRequestFilter</filter-class>
+			<init-param>
+				<description>字符集编码</description>
+				<param-name>encoding</param-name>
+				<param-value>UTF-8</param-value>
+			</init-param>
+		</filter>
+		<filter-mapping>
+	  <filter-name>requestFilter</filter-name>
+ 	 <url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
